--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.android.gms:play-services-maps:9.4.0+'
+    compile 'com.google.android.gms:play-services-appindexing:9.4.0+'
+    compile 'com.google.android.gms:play-services-location:9.4.0+'
     testCompile 'junit:junit:4.12'
 }
