--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".MapsActivity"
             android:label="Rulletrippen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
